--- a/index.html
+++ b/index.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/d7fb18c6b6.js" crossorigin="anonymous"></script>
+    <!--  -->
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!--  -->
+
 </head>
 <body>
-    
+    <!-- header start -->
+     <header class="container">
+         <nav class="nav">
+            <div class="nav-text">
+                <h3>G3 Architects</h3>
+            </div>
+            <div class="nav-bar">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                    <li>Login</li>
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                </ul>
+            </div>
+         </nav>
+         <!-- banner -->
+         <div class="heading-banner">
+             <div class="banner-title">
+                 <h1>Brand New Group of Architects</h1>
+                 <div class="banner-text">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                 </div>
+             </div>
+             <div class="banner-btn">
+                <button>Explore More</button>
+             </div>               
+             <div class="banner-img">
+                <img src="images/banner.png" alt="">
+             </div>
+         </div>
+     </header>
+    <!-- header end -->
+
+    <!-- body part start -->
+    <main>
+       <section class="container">
+        <div class="features">
+            
+        </div>
+       </section> 
+    </main>
+
 </body>
 </html>
