--- a/index.html
+++ b/index.html
@@ -107,10 +107,74 @@
        <!-- section-2 end -->
 
        <!-- setion-3 -->
-       <section>
-        
+       <section class="container">
+           <div class="fact">
+            <h2>Some Facts</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+           </div>
        </section>
-    </main>
+       <!-- section-3 end -->
 
+       <!-- section-4 -->
+       <section class="conainer">
+        <div class="boxes">
+            <div class="box box-1">
+                <img src="icons/ribon.png" alt="">
+                <h3>54</h3>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="box box-2">
+                <img src="icons/projects.png" alt="">
+                <h3>1458</h3>
+                <p>Project Finished</p>
+            </div>
+            <div class="box box-3">
+                <img src="icons/customers.png" alt="">
+                <h3>590</h3>
+                <p>Clients Worked</p>
+            </div>
+            <div class="box box-4">
+                <img src="icons/email.png" alt="">
+                <h3>22578</h3>
+                <p>Email Send</p>
+            </div>
+        </div>
+       </section>
+       <!-- section-4 end -->
+
+       <!-- section-5 -->
+       <section class="container">
+        <div class="spons">
+            <h2>Our Sponsors</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+       </section>
+       <!-- section-5 end -->
+
+       <!-- section-6 -->
+       <section class="container">
+        <div class="sponsors">
+            <div>
+                <img src="sponsors/spotify.png" alt="">
+            </div>
+            <div>
+                <img src="sponsors/amazon.png" alt="">
+            </div>
+            <div>
+                <img src="sponsors/google.png" alt="">
+            </div>
+            <div>
+                <img src="sponsors/telerama.png" alt="">
+            </div>
+            <div>
+                <img src="sponsors/figma.png" alt="">
+            </div>
+        </div>
+       </section>
+       <!-- section-6 end -->
+    </main>
+    <footer class="container">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
