--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
          </nav>
          <!-- banner -->
          <div class="heading-banner">
-             <div class="banner-title">
-                 <h1>Brand New Group of Architects</h1>
+             <div class="banner-detail">
+                 <h1 class="banner-title">Brand New Group of Architects</h1>
                  <div class="banner-text">
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                  </div>
@@ -63,7 +63,7 @@
             <div class="feature-detail">
                 <h2 class="feature-title">Quick list of Our Features</h2>
                 <p class="feature-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button>Explore More</button>
+                <button class="feature-btn">Explore More</button>
             </div>
         </div>
        </section>
