--- a/index.html
+++ b/index.html
@@ -78,24 +78,26 @@
                         <h2 class="title-exp">Features you will love & enjoy</h2>
                     </div>
                     <p class="text-exp">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                </div>           
-             <article class="explain">
-                 <h3 class="explain-title">Dexktop & Mobile Version</h3>
-                 <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-             </article>
-             <article class="explain">
-                 <h3 class="explain-title"></h3>>Drag & Drop Builder</h3>
-                 <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-             </article>
-             <article class="explain">
-                 <h3 class="explain-title"></h3>>Awesome Modern Design</h3>
-                 <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-             </article>
-             <article class="explain">
-                 <h3 class="explain-title"></h3>>Super Easy to Edit</h3>
-                 <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-             </article>
-           </div>
+                </div>
+             <div class="explains">            
+               <div class="explain exp-1">
+                  <h3 class="explain-title">Dexktop & Mobile Version</h3>
+                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div class="explain exp-2">
+                  <h3 class="explain-title">Drag & Drop Builder</h3>
+                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div class="explain exp-3">
+                  <h3 class="explain-title">Awesome Modern Design</h3>
+                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div class="explain exp-4">
+                  <h3 class="explain-title">Super Easy to Edit</h3>
+                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+              </div> 
+            </div>
            <div class="exp-img-btn">
             <div class="exp-img"><img src="images/architect.png" alt=""></div>
             <div class="exp-btn">
@@ -114,8 +116,8 @@
        <!-- setion-3 -->
        <section class="container">
            <div class="fact">
-            <h2>Some Facts</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div><h2>Some Facts</h2></div>
+            <div><p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p></div>
            </div>
        </section>
        <!-- section-3 end -->
