--- a/index.html
+++ b/index.html
@@ -79,109 +79,112 @@
                     </div>
                     <p class="text-exp">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 </div>
-             <div class="explains">            
-               <div class="explain exp-1">
+              <div class="explains">            
+                <div class="explain exp-1">
                   <h3 class="explain-title">Dexktop & Mobile Version</h3>
                   <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-               </div>
-               <div class="explain exp-2">
+                </div>
+                <div class="explain exp-2">
                   <h3 class="explain-title">Drag & Drop Builder</h3>
                   <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-               </div>
-               <div class="explain exp-3">
+                </div>
+                <div class="explain exp-3">
                   <h3 class="explain-title">Awesome Modern Design</h3>
                   <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-               </div>
-               <div class="explain exp-4">
+                </div>
+                <div class="explain exp-4">
                   <h3 class="explain-title">Super Easy to Edit</h3>
                   <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-               </div>
+                </div>
               </div> 
             </div>
            <div class="exp-img-btn">
             <div class="exp-img"><img src="images/architect.png" alt=""></div>
-            <div class="exp-btn">
-                <button class="ex-btn">
-                    <h2>10+Year</h1>
-                       <p>Experience</p>
-                </button>
-             </div>
-           </div>
-           
+           </div>           
         </div>
-        
+        <button class="ex-btn">
+            <h2 style="margin-bottom: 0px;">10+Year</h2>
+            <p style="margin-top: 2px; font-size: 12px;">Experience</p>
+        </button> 
        </section>
        <!-- section-2 end -->
 
        <!-- setion-3 -->
        <section class="container">
-           <div class="fact">
-            <div><h2>Some Facts</h2></div>
-            <div><p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p></div>
-           </div>
+        <div class="fact-detail">
+          <div class="fact-detail-box">
+              <h2 class="fact-title">Some Facts</h2>
+          <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+          </div>
+        </div>
+        <div class="fact-boxes">
+            <div class="fact-box">
+               <img src="icons/ribon.png" alt="" class="icon">
+               <h2 class="taka">54</h2>
+               <p class="des">Awards Winnings</p>
+            </div>
+            <div class="fact-box">
+               <img src="icons/projects.png" alt="" class="icon">
+               <h2 class="taka">54</h2>
+               <p class="des">Awards Winnings</p>
+            </div>
+            <div class="fact-box">
+               <img src="icons/customers.png" alt="" class="icon">
+               <h2 class="taka">54</h2>
+               <p class="des">Awards Winnings</p>
+            </div>
+            <div class="fact-box">
+               <img src="icons/email.png" alt="" class="icon">
+               <h2 class="taka">54</h2>
+               <p class="des">Awards Winnings</p>
+            </div>
+        </div>
        </section>
        <!-- section-3 end -->
 
        <!-- section-4 -->
-       <section class="conainer">
-        <div class="boxes">
-            <div class="box box-1">
-                <img src="icons/ribon.png" alt="">
-                <h3>54</h3>
-                <p>Awards Winnings</p>
-            </div>
-            <div class="box box-2">
-                <img src="icons/projects.png" alt="">
-                <h3>1458</h3>
-                <p>Project Finished</p>
-            </div>
-            <div class="box box-3">
-                <img src="icons/customers.png" alt="">
-                <h3>590</h3>
-                <p>Clients Worked</p>
-            </div>
-            <div class="box box-4">
-                <img src="icons/email.png" alt="">
-                <h3>22578</h3>
-                <p>Email Send</p>
-            </div>
+       <section class="container">
+        <div class="sponser-detail">
+            <div class="sponser-detail-box">
+           <h2 class="sponser-title">Our Sponspors</h2>
+       <p class="sponser-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+       </div>
+        </div>
+
+        <div class="logos">
+           <div class="logo"><img src="sponsors/spotify.png" alt=""></div>
+           <div class="logo"><img src="sponsors/amazon.png" alt=""></div>
+           <div class="logo"><img src="sponsors/google.png" alt=""></div>
+           <div class="logo"><img src="sponsors/telerama.png" alt=""></div>
+           <div class="logo"><img src="sponsors/figma.png" alt=""></div>
         </div>
        </section>
        <!-- section-4 end -->
 
-       <!-- section-5 -->
+       <!--Extra section-5 -->
        <section class="container">
-        <div class="spons">
-            <h2>Our Sponsors</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="contact">
+            <h1 class="message-title">Let's Message Us</h1>
+            <form action="">
+                <!-- <input type="text" name="" id="" placeholder="Your Name"> -->
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-send" type="submit" value="Send">
+                <!-- <button class="btn-primary">Submit</button> -->
+            </form>
         </div>
-       </section>
-       <!-- section-5 end -->
-
-       <!-- section-6 -->
-       <section class="container">
-        <div class="sponsors">
-            <div>
-                <img src="sponsors/spotify.png" alt="">
-            </div>
-            <div>
-                <img src="sponsors/amazon.png" alt="">
-            </div>
-            <div>
-                <img src="sponsors/google.png" alt="">
-            </div>
-            <div>
-                <img src="sponsors/telerama.png" alt="">
-            </div>
-            <div>
-                <img src="sponsors/figma.png" alt="">
-            </div>
-        </div>
-       </section>
-       <!-- section-6 end -->
+      </section>
+      <!--Extra section-5 end -->
     </main>
-    <footer class="container">
-        <p>All rights reserved copyright@2023 startup landing page design</p>
-    </footer>
+
+    <!-------------- Footer Section --------------->
+    <footer>
+        <section class="container">
+            <div class="footer-box">
+                <p class="copy">All rights reserved copyright@2023 startup landing page design</p>
+            </div>
+        </section>
+   </footer>
+   <!-------------- Footer Section end--------------->
 </body>
 </html>
