--- a/index.html
+++ b/index.html
@@ -2,167 +2,176 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/d7fb18c6b6.js" crossorigin="anonymous"></script>
-    <!--  -->
+    <title>Architects Website </title>
 
-    <!-- stylesheet -->
+    <!----------------- Stylesheet ----------------->
     <link rel="stylesheet" href="styles/style.css">
-    <!--  -->
 
 </head>
 <body>
-    <!-- header start -->
-     <header class="container">
-         <nav class="nav">
-            <div class="nav-text">
-                <h3>G3 Architects</h3>
+
+    <!-------------- Header Section --------------->
+    <header>
+    <div class="header">
+        <nav>
+            <h2 class="nav-title">G3 Architects</h2>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contacts Us</li>
+                <li>Log in</li>
+            </ul>
+        </nav>
+        <div class="header-banner">
+            <!-- ============================================= -->
+
+            <div class="header-details">
+                <h2 class="header-title">Brand New </h2>
+                <h2 class="header-title">Group of Architects </h2>
+            <p class="header-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+             <button class="btn-primary">Explore More</button> 
             </div>
-            <div class="nav-bar">
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact Us</li>
-                    <li>Login</li>
-                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                </ul>
+            <!-- <button class="btn-primary">Explore More</button> -->
+
+            <!-- =============================================== -->
+
+            <div class="header-image">
+                <img class="image" src="images/banner.png" alt="">
             </div>
-         </nav>
-         <!-- banner -->
-         <div class="heading-banner">
-             <div class="banner-detail">
-                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                 <div class="banner-text">
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+            <!-- =============================================== -->
+        </div>
+    </div>
+  </header>
+
+    <!-------------- Main Section --------------->
+       <main>
+    <!------------------- Quick List Feature Section start --------------------->
+      <section class="container">
+           <div class="list-feature">
+               <!-- ============================ -->
+               <div class="list-images">
+                  <img src="images/team1.png" alt="" class="list-image">
+                  <img src="images/team2.png" alt="" class="list-image">
+                  <img src="images/team3.png" alt="" class="list-image">
+                  <img src="images/team4.png" alt="" class="list-image">
+               </div>
+               <!-- ============================ -->
+               <div class="list-details">
+                  <h3 style="color: #727272;" class="list-title">Quick list
+                      <strong style="color: black;">of Our </strong><strong style="color: #FF900E;"> Features</strong></h3>
+                  <p class="list-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                  <button class="btn-primary">Explore More</button>
+               </div>
+           </div>
+      </section>
+      <!------------------- Quick List feature Section end ------------------->
+    
+      <!------------ Feature love and enjoy start -------------->
+         <section class="container">
+           <div class="features">
+               <div class="left-side">
+                 <div class="title-box">
+                     <h2 class="side-title"> Features you will love & enjoy </h2>
                  </div>
+               <div class="box-side-des"><p class="side-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p></div>
+                 <!-- --------------------------------- -->
+                 <div class="boxes">
+                     <div class="box">
+                <div class="box-title"><strong>Desktop & Mobile Version</strong></div>
+                      <div class="box-des">
+                          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                      </div>
+                     </div>
+                     <div class="box">
+                <div class="box-title"><strong>Drag & Drop Builder</strong></div>
+                      <div class="box-des">
+                          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                      </div>
+                     </div>
+                     <div class="box">
+                <div class="box-title"><strong>Awesome Modern Design</strong></div>
+                      <div class="box-des">
+                          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                      </div>
+                     </div>
+                     <div class="box">
+                <div class="box-title"><strong>Super Easy to Edit</strong></div>
+                      <div class="box-des">
+                          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
+                      </div>
+                     </div>
+                 </div>
+               </div>
+               <!-- -------------------------------- -->
+               <div class="right-side">
+                   <img src="images/architect.png" alt="" class="right-image">   
+
+               </div>
+               <!-- ------------------------------- -->           
+           </div>
+          <button class="btn-special">
+               <h2 style="margin-bottom: 0px;">10+Year</h2>
+               <p style="margin-top: 2px; font-size: 12px;">Experience</p>
+           </button> 
+         </section>        
+      <!------------ Feature love and enjoy end -------------->
+
+      <!---------------- Some Facts Section start ------------------->
+      <section class="container">
+         <div class="fact-detail">
+           <div class="fact-detail-box">
+               <h2 class="fact-title">Some Facts</h2>
+           <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+           </div>
+         </div>
+         <div class="fact-boxes">
+             <div class="fact-box">
+                <img src="icons/ribon.png" alt="" class="icon">
+                <h2 class="taka">54</h2>
+                <p class="des">Awards Winnings</p>
              </div>
-             <div>
-                <button class="banner-btn">Explore More</button>
-             </div>               
-             <div class="banner-img">
-                <img src="images/banner.png" alt="">
+             <div class="fact-box">
+                <img src="icons/projects.png" alt="" class="icon">
+                <h2 class="taka">1458</h2>
+                <p class="des">Project Finished</p>
+             </div>
+             <div class="fact-box">
+                <img src="icons/customers.png" alt="" class="icon">
+                <h2 class="taka">590</h2>
+                <p class="des">Clients Worked</p>
+             </div>
+             <div class="fact-box">
+                <img src="icons/email.png" alt="" class="icon">
+                <h2 class="taka">22578</h2>
+                <p class="des">Email Send</p>
              </div>
          </div>
-     </header>
-    <!-- header end -->
+      </section>
+      <!---------------- Some Facts Section end ------------------->
 
-    <!-- body part start -->
-    <main>
-        <!-- section-1 -->
-       <section class="container">
-        <div class="features">
-            <div class="features-img">
-               <div><img src="images/team1.png" alt=""></div>
-               <div><img src="images/team2.png" alt=""></div>
-               <div><img src="images/team3.png" alt=""></div>
-               <div><img src="images/team4.png" alt=""></div>
+      <!------------- Our Sponspors section start ---------------->
+        <section class="container">
+            <div class="sponser-detail">
+                <div class="sponser-detail-box">
+               <h2 class="sponser-title">Our Sponspors</h2>
+           <p class="sponser-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+           </div>
             </div>
-            <div class="feature-detail">
-                <h2 class="feature-title"><span style="color: #727272; font-weight: 500;">Quick list</span> of Our <span style="color: #FF900E;">Features</span></h2>
-                <p class="feature-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="feature-btn">Explore More</button>
-            </div>
-        </div>
-       </section>
-       <!-- section-1 end -->
-       
-       <!-- section-2 -->
-       <section class="container">
-        <div class="feature-explain">
-            <div class="explaining">
-                <div class="exp">
-                    <div class="exp-title">
-                        <h2 class="title-exp">Features you will love & enjoy</h2>
-                    </div>
-                    <p class="text-exp">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                </div>
-              <div class="explains">            
-                <div class="explain exp-1">
-                  <h3 class="explain-title">Dexktop & Mobile Version</h3>
-                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-                <div class="explain exp-2">
-                  <h3 class="explain-title">Drag & Drop Builder</h3>
-                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-                <div class="explain exp-3">
-                  <h3 class="explain-title">Awesome Modern Design</h3>
-                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-                <div class="explain exp-4">
-                  <h3 class="explain-title">Super Easy to Edit</h3>
-                  <p class="explain-detail">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-              </div> 
-            </div>
-           <div class="exp-img-btn">
-            <div class="exp-img"><img src="images/architect.png" alt=""></div>
-           </div>           
-        </div>
-        <button class="ex-btn">
-            <h2 style="margin-bottom: 0px;">10+Year</h2>
-            <p style="margin-top: 2px; font-size: 12px;">Experience</p>
-        </button> 
-       </section>
-       <!-- section-2 end -->
 
-       <!-- setion-3 -->
-       <section class="container">
-        <div class="fact-detail">
-          <div class="fact-detail-box">
-              <h2 class="fact-title">Some Facts</h2>
-          <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-          </div>
-        </div>
-        <div class="fact-boxes">
-            <div class="fact-box">
-               <img src="icons/ribon.png" alt="" class="icon">
-               <h2 class="taka">54</h2>
-               <p class="des">Awards Winnings</p>
+            <div class="logos">
+               <div class="logo"><img src="sponsors/spotify.png" alt=""></div>
+               <div class="logo"><img src="sponsors/amazon.png" alt=""></div>
+               <div class="logo"><img src="sponsors/google.png" alt=""></div>
+               <div class="logo"><img src="sponsors/telerama.png" alt=""></div>
+               <div class="logo"><img src="sponsors/figma.png" alt=""></div>
             </div>
-            <div class="fact-box">
-               <img src="icons/projects.png" alt="" class="icon">
-               <h2 class="taka">54</h2>
-               <p class="des">Awards Winnings</p>
-            </div>
-            <div class="fact-box">
-               <img src="icons/customers.png" alt="" class="icon">
-               <h2 class="taka">54</h2>
-               <p class="des">Awards Winnings</p>
-            </div>
-            <div class="fact-box">
-               <img src="icons/email.png" alt="" class="icon">
-               <h2 class="taka">54</h2>
-               <p class="des">Awards Winnings</p>
-            </div>
-        </div>
-       </section>
-       <!-- section-3 end -->
+        </section>
+      <!------------- Our Sponspors section end ---------------->
 
-       <!-- section-4 -->
-       <section class="container">
-        <div class="sponser-detail">
-            <div class="sponser-detail-box">
-           <h2 class="sponser-title">Our Sponspors</h2>
-       <p class="sponser-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-       </div>
-        </div>
-
-        <div class="logos">
-           <div class="logo"><img src="sponsors/spotify.png" alt=""></div>
-           <div class="logo"><img src="sponsors/amazon.png" alt=""></div>
-           <div class="logo"><img src="sponsors/google.png" alt=""></div>
-           <div class="logo"><img src="sponsors/telerama.png" alt=""></div>
-           <div class="logo"><img src="sponsors/figma.png" alt=""></div>
-        </div>
-       </section>
-       <!-- section-4 end -->
-
-       <!--Extra section-5 -->
-       <section class="container">
+      <!------------------ Extra Section start ----------------->
+      <section class="container">
         <div class="contact">
             <h1 class="message-title">Let's Message Us</h1>
             <form action="">
@@ -174,17 +183,16 @@
             </form>
         </div>
       </section>
-      <!--Extra section-5 end -->
-    </main>
+      <!------------------ Extra Section start ----------------->
+   </main>
 
     <!-------------- Footer Section --------------->
-    <footer>
+   <footer>
         <section class="container">
             <div class="footer-box">
                 <p class="copy">All rights reserved copyright@2023 startup landing page design</p>
             </div>
         </section>
    </footer>
-   <!-------------- Footer Section end--------------->
 </body>
 </html>
